# abstract-vm

./: GRAMMAR.md  Makefile  README.md  meson.build
.github/workflows/: c-cpp.yml
abstract-vm/: Makefile  abstractvm.hpp  meson.build
abstract-vm/src/: IOperand.hpp  Interpreter.cpp  Interpreter.hpp  Lexer.cpp  Lexer.hpp  Operand.cpp  Operand.hpp  OperandFactory.cpp  OperandFactory.hpp  Parser.cpp  Parser.hpp  abstractvm.cpp  abstractvm.hpp
abstract-vm/src/ast/: Instruction.cpp  Instruction.hpp  Value.cpp  Value.hpp
runtime/: meson.build
runtime/src/: main.cpp
subprojects/fmt/: Makefile
tests/: meson.build
tests/src/: lexer.cpp  main.cpp  operands.cpp  parser.cpp  precision.cpp  programs.cpp
